Finished with Employer add. Employer dropdown and skills dropdown remaining in the jobs add functionality.

--- a/TechJobsPersistentAutograded/TechJobsPersistentAutograded.csproj
+++ b/TechJobsPersistentAutograded/TechJobsPersistentAutograded.csproj
@@ -23,7 +23,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="ViewModels\" />
     <Folder Include="Views\Employer\" />
     <Folder Include="Views\List\" />
     <Folder Include="Views\Search\" />
@@ -31,6 +30,7 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design.Specification.Tests" Version="2.0.3" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.27" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.27">
